@@ -1,11 +1,6 @@
 package com.senars.explain;
 
-import com.senars.core.Thought;
-import com.senars.core.ThoughtContent;
-import com.senars.core.ThoughtMeta;
-import com.senars.core.ThoughtOrigin;
-import com.senars.core.ThoughtState;
-import com.senars.core.ThoughtType;
+import com.senars.core.*;
 import com.senars.events.EventBus;
 import com.senars.events.EventSubscriber;
 import com.senars.events.Events;
@@ -42,7 +37,7 @@ public class CausalExplanationGenerator implements EventSubscriber<Events.NewTho
     @Override
     public void onEvent(Events.NewThoughtCreatedEvent event) {
         Thought thought = event.thought();
-        
+
         // Check if this is an explanation request (EXPLAIN type thought)
         if (thought.metadata().type() == ThoughtType.EXPLAIN) {
             LOGGER.info("Received explanation request for thought: {}", thought.id());
@@ -63,28 +58,28 @@ public class CausalExplanationGenerator implements EventSubscriber<Events.NewTho
                 LOGGER.warn("Explanation request has no target thought ID in trace.");
                 return;
             }
-            
-            String targetThoughtId = trace.get(0);
+
+            String targetThoughtId = trace.getFirst();
             memory.getThoughtById(targetThoughtId).ifPresentOrElse(
-                targetThought -> {
-                    // Generate the causal explanation
-                    String explanationText = generateExplanationText(targetThought);
-                    
-                    // Create a report thought with the explanation
-                    ThoughtContent content = new ThoughtContent(explanationText, "xai:causal_explanation", null, null, null, null, null);
-                    ThoughtMeta meta = new ThoughtMeta(
-                            ThoughtType.REPORT,
-                            ThoughtOrigin.SYSTEM,
-                            List.of(targetThoughtId),
-                            Instant.now()
-                    );
-                    ThoughtState state = new ThoughtState(1.0, EXPLANATION_SALIENCE, 1.0);
-                    Thought explanationReport = new Thought(UUID.randomUUID().toString(), content, state, meta);
-                    
-                    LOGGER.info("Generated causal explanation report: {}", explanationReport.id());
-                    eventBus.publish(new Events.NewThoughtCreatedEvent(explanationReport));
-                },
-                () -> LOGGER.warn("Target thought not found in memory: {}", targetThoughtId)
+                    targetThought -> {
+                        // Generate the causal explanation
+                        String explanationText = generateExplanationText(targetThought);
+
+                        // Create a report thought with the explanation
+                        ThoughtContent content = new ThoughtContent(explanationText, "xai:causal_explanation", null, null, null, null, null);
+                        ThoughtMeta meta = new ThoughtMeta(
+                                ThoughtType.REPORT,
+                                ThoughtOrigin.SYSTEM,
+                                List.of(targetThoughtId),
+                                Instant.now()
+                        );
+                        ThoughtState state = new ThoughtState(1.0, EXPLANATION_SALIENCE, 1.0);
+                        Thought explanationReport = new Thought(UUID.randomUUID().toString(), content, state, meta);
+
+                        LOGGER.info("Generated causal explanation report: {}", explanationReport.id());
+                        eventBus.publish(new Events.NewThoughtCreatedEvent(explanationReport));
+                    },
+                    () -> LOGGER.warn("Target thought not found in memory: {}", targetThoughtId)
             );
         } catch (Exception e) {
             LOGGER.error("Error generating causal explanation", e);
@@ -101,7 +96,7 @@ public class CausalExplanationGenerator implements EventSubscriber<Events.NewTho
         try {
             // Get the causal chain
             List<Thought> causalChain = explain.getCausalChain(targetThought);
-            
+
             // Format the causal chain into a narrative
             return explain.formatCausalChain(causalChain, targetThought);
         } catch (Exception e) {
